@@ -637,6 +637,10 @@ extern "C" {
 #  undef ncrystal_runmmcsim_stdengine
 #endif
 #define ncrystal_runmmcsim_stdengine NCRYSTAL_APPLY_C_NAMESPACE(runmmcsim_stdengine)
+#ifdef ncrystal_minimc
+#  undef ncrystal_minimc
+#endif
+#define ncrystal_minimc NCRYSTAL_APPLY_C_NAMESPACE(minimc)
 
 
   /*============================================================================== */
@@ -1342,6 +1346,18 @@ extern "C" {
                                                   unsigned * tally_exitangle_nbins,
                                                   double ** tally_exitangle_contents,
                                                   double ** tally_exitangle_errsq );
+
+  /* Run the MiniMC simulation engine, based on a given material, geometry,    */
+  /* source and engine configuration.                                          */
+  /* Results are returned as a JSON string, which must be cleaned up with      */
+  /* ncrystal_dealloc_string).                                                 */
+  /* The actual contents of the the various cfg strings and JSON data is       */
+  /* documented elsewhere.                                                     */
+  NCRYSTAL_API char* ncrystal_minimc( const char * material_cfgstr,
+                                      const char * geomcfg,
+                                      const char * srccfg,
+                                      const char * enginecfg );
+
 
 #ifdef __cplusplus
 }
