@@ -33,6 +33,11 @@ v4.2.13 (work-in-progress)
      * Fix flawed asserts preventing proper MiniMC usage in debug builds.
      * MiniMC sources can now actually alter the weights of initial particles,
        and will keep track of the summed weights generated.
+     * Add ncrystal_minimc function in C-API, which interacts solely via the
+       four relevant cfg-strings (material, source, geometry, engine) and
+       returns results via JSON. This provides a more flexible and maintainable
+       interface than the existing ncrystal_runmmcsim_stdengine which is thus
+       deprecated.
      * ...
 
 v4.2.12 2026-01-05
